--- a/F1WorldChampions/app/src/main/AndroidManifest.xml
+++ b/F1WorldChampions/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.F1WorldChampions">
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".DetailActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
