--- a/Submission/GithubUser/app/build.gradle
+++ b/Submission/GithubUser/app/build.gradle
@@ -23,6 +23,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        applicationVariants.all { variant ->
+            variant.buildConfigField "String", "GITHUB_API_TOKEN", "\""+getApiKey()+"\""
+        }
     }
 
     compileOptions {
@@ -39,6 +43,13 @@ android {
     }
 }
 
+def getApiKey() {
+    Properties props = new Properties()
+    props.load(new FileInputStream(new File('local.properties')))
+
+    return props['GITHUB_API_TOKEN']
+}
+
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -50,7 +61,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
