--- a/Submission/GithubUser/app/build.gradle
+++ b/Submission/GithubUser/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
