--- a/Module4-LocalStorageData/MyNotesApp/app/src/main/AndroidManifest.xml
+++ b/Module4-LocalStorageData/MyNotesApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dicoding.salsahava.mynotesapp">
 
+    <permission
+        android:name="com.dicoding.salsahava.mynotesapp.READ_DATABASE"
+        android:protectionLevel="normal" />
+    <permission
+        android:name="com.dicoding.salsahava.mynotesapp.WRITE_DATABASE"
+        android:protectionLevel="normal" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +16,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyNotesApp">
-        <activity android:name=".NoteAddUpdateActivity"></activity>
+        <provider
+            android:name=".provider.NoteProvider"
+            android:authorities="com.dicoding.salsahava.mynotesapp"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.dicoding.salsahava.mynotesapp.READ_DATABASE"
+            android:writePermission="com.dicoding.salsahava.mynotesapp.WRITE_DATABASE" />
+
+        <activity android:name=".NoteAddUpdateActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
