--- a/Module5-ExtendedApplication/MyWidgets/app/src/main/AndroidManifest.xml
+++ b/Module5-ExtendedApplication/MyWidgets/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.dicoding.salsahava.mywidgets.UpdateWidgetService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
