--- a/Module1-Fundamentals/MyFlexibleFragment/gradle/wrapper/gradle-wrapper.properties
+++ b/Module1-Fundamentals/MyFlexibleFragment/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Mar 16 20:57:19 ICT 2021
+#Wed Apr 21 23:08:41 ICT 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
