--- a/Submission/GithubUser/app/src/main/AndroidManifest.xml
+++ b/Submission/GithubUser/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <permission
+        android:name="com.dicoding.salsahava.githubuser.READ_DATABASE"
+        android:protectionLevel="normal" />
+    <permission
+        android:name="com.dicoding.salsahava.githubuser.WRITE_DATABASE"
+        android:protectionLevel="normal" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +18,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubUser">
-        <activity android:name=".FavoriteActivity"></activity>
+        <provider
+            android:name=".provider.FavUserProvider"
+            android:authorities="com.dicoding.salsahava.githubuser"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.dicoding.salsahava.githubuser.READ_DATABASE"
+            android:writePermission="com.dicoding.salsahava.githubuser.WRITE_DATABASE" />
+
+        <activity android:name=".FavoriteActivity" />
         <activity android:name=".DetailActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
