--- a/Submission/GithubUser/app/src/main/AndroidManifest.xml
+++ b/Submission/GithubUser/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.dicoding.salsahava.githubuser">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <permission
         android:name="com.dicoding.salsahava.githubuser.READ_DATABASE"
@@ -18,7 +20,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubUser">
-        <activity android:name=".PreferencesActivity"></activity>
+        <receiver
+            android:name=".receiver.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".PreferencesActivity" />
 
         <provider
             android:name=".provider.FavUserProvider"
